Kubernetes/myweb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myweb-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myweb-svc-np
                port:
                  number: 80
